# aptly_update

./: MANIFEST.in  README.md  pyproject.toml
src/aptly_update/: aptly_update.py  example.yaml
src/aptly_update/plugins/: vscode.py
tests/: test_params.py  test_publish.py  test_timestamp.py  test_vscode.py  test_yaml.py
tests/plugins/: test_vscode.py
